# spackle-python

./: README.md  pyproject.toml
.github/workflows/: test.yml
examples/flask/: app.py
spackle/: __init__.py  constants.py  customer.py  dynamodb.py  exceptions.py  log.py  pricing_table.py  subscription.py  waiters.py
spackle/stores/: __init__.py  api.py  base.py  dynamodb.py  edge.py  file.py  memory.py
tests/: test_api.py  test_customer.py  test_dynamodb.py  test_edge.py  test_file.py  test_memory.py  test_pricing_table.py  test_waiters.py
