[tool.poetry]
name = "spackle-python"
version = "0.0.11"
description = ""
authors = ["Hunter Clarke <hunter@spackle.so>"]
readme = "README.md"
packages = [{include = "spackle"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
boto3 = "^1.26.32"
botocore = "^1.29.35"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
