[tool.poetry]
name = "spackle-python"
version = "0.0.39"
description = ""
authors = ["Hunter Clarke <hunter@spackle.so>"]
readme = "README.md"
packages = [{include = "spackle"}]

[tool.poetry.dependencies]
python = "^3.9"
stripe = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
